# python-glib-log-bridge

./: .readthedocs.yaml  README.md  setup.cfg  setup.py
docs/: api.rst  conf.py  getting_started.rst  index.rst  requirements.txt  usage.rst
glib_log_bridge/: glib2python.py  python2glib.py
tests/: glib2python.py  python2glib.py  test_glib2python.py  test_python2glib.py
