[metadata]
name = glib-log-bridge
version = 0.0.2-dev
author = Neui
description = Bridge Python and GLib logging facilities"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Neui/python-glib-log-bridge
project_urls =
	Bug Tracker (GitHub) = https://github.com/Neui/python-glib-log-bridge/issues
	Source Code (GitHub) = https://github.com/Neui/python-glib-log-bridge
	Bug Tracker (GitLab) = https://gitlab.com/Neui/python-glib-log-bridge/-/issues
	Source Code (GitLab) = https://gitlab.com/Neui/python-glib-log-bridge
	Latest Documentation = https://python-glib-log-bridge.readthedocs.io/en/latest/
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Topic :: Software Development :: Libraries
	Topic :: System :: Logging
	Typing :: Typed

[options]
packages = find:
python_requires = >=3.8
test_suite = tests
